# sshy

./: .gitignore  Cargo.toml  README.md  shell.nix
docs/: book.toml  implementation.md
docs/src/: SUMMARY.md  app-design.md  introduction.md
docs/src/implementation/: README.md  commands.md  errors.md  messages.md  ssh-commands.md
src/: implementation.md  lib.rs  main.rs  tui.rs
src/actions/: mod.rs
src/async_jobs/: copy_to_clipboard.rs  delete_key_pair.rs  mod.rs
src/commands/: mod.rs  ssh_keygen.rs
src/dispatcher/: mod.rs
src/events/: bindings.rs  messages.rs  mod.rs  vim_handler.rs
src/examples/: app_counter.rs  error_handling.rs  hello_world.rs  mod.rs
src/examples/app_counter/: error_handling.rs  mod.rs
src/examples/json_editor/: mod.rs  ui.rs
src/model/: mod.rs  vim_emulator.rs
src/model/sections_state/: client_config_state.rs  known_hosts_list_state.rs  mod.rs  public_keys_list_state.rs
src/ssh_commands/: mod.rs  ssh_keygen.rs
src/stores/: app_state_store.rs  known_hosts_store.rs  mod.rs
src/terminal/: mod.rs
src/ui/: app_layout.rs  color_variants.rs  mod.rs  popups.rs  ui_utils.rs
src/ui/components/: mod.rs  ui_utils.rs
src/ui/components/footers/: main_footer.rs  mod.rs
src/ui/components/popups/: add_pub_key.rs  debug_model.rs  error_msg.rs  exit_prompt.rs  mod.rs  prompt_key_overwrite.rs  (+5 more)
src/ui/ui_utils/: mod.rs  popups.rs  styles.rs  text_input.rs
src/ui/widgets/: blocks.rs
src/utils/: command.rs  constants.rs  data_parsing.rs  files.rs  math.rs  mod.rs  strings.rs
src/utils/types/: mod.rs  textarea_state.rs
(+4 files in other folders)
