[package]
name = "sshy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.27.0"
dirs = "5.0.1"
ratatui = { version = "0.26.2", features = ["unstable-rendered-line-info"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.41.0", features = ["full"] }
