[package]
name = "sshy"
description = "TUI application to make SSH configuration easier"
version = "0.1.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28"
dirs = "5.0.1"
portable-pty = "0.8.1"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.41.0", features = ["full"] }
copypasta = "0.10.1"
textwrap = "0.16"
tui-textarea = { version = "0.7" }
